[package]
name = "compiler_test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
cranelift = "0.113.0"
cranelift-codegen = "0.113.0"
cranelift-frontend = "0.113.0"
cranelift-jit = "0.113.0"
cranelift-module = "0.113.0"
cranelift-native = "0.113.0"
cranelift-object = "0.113.0"
delegate = "0.13.1"
target-lexicon = "0.12.16"
thiserror = "1.0.67"
